<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">cards</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="game_guess">Игра "Угадай"</string>
    <string name="game_collect">Игра "Собери"</string>
    <string name="game_remember">Игра "Вспомни"</string>
    <string name="dictionary">Словарь</string>
    <string name="title_activity_game_guess">GameGuessActivity</string>
    <string name="title_game_guess">Угадай</string>
    <string name="result">Итоги</string>
    <string name="help">Помощь</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_select_theme">SelectThemeActivity</string>
    <string name="select_theme">Выберите тему</string>
    <string name="empty_themes">Тем нет</string>
    
    
</resources>